fix migrations path in dockerfile
